@@ -1,6 +1,13 @@
 v3.4.0-rc.5 (XXXX-XX-XX)
 ------------------------
 
+* Persist and check default language (locale) selection.
+  Previously we would not check if the language had changed when the server was
+  restarted. This could cause issues with indexes over text fields, as it will
+  result in undefined behavior within RocksDB (missing entries, corruption,
+  etc.). Now if the language is changed, ArangoDB will print out an error
+  message and abort.
+
 * fix internal issue #2786: improved confirmation dialog when clicking the truncate 
   button in the web UI
 
